# agent-data

./: .coverage  .coverage_cli140m1_final_report.json  .coverage_cli140m1_report.json  .coverage_cli140m2_baseline.json  .coverage_cli140m2_new.json  .coverage_cli140m2_test_report.json  .coverage_cli140m7_baseline.json  .coverage_cli140m7_combined.json  .coverage_cli140m7_final.json  .coverage_cli140m7_new.json  .coverage_cli140m7_ultimate.json  .coverage_cli140m8_baseline.json  .coverage_cli140m8_final.json  .coverage_cli140m_report.json  .coverage_current.json  .coverage_custom_report.json  .cursor.md  .cursor_ci_nudge.txt  .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  .report.json  .testmondata  .testmondata-shm  .testmondata-wal  0_Run Tests in a Clean Docker Environment.txt  0_Test Suite.txt  169.2_cursor_purge_only_old_app_code.md  169_cursor_isolate_ci_with_dummy_code.md  170.1_cursor_verify_and_sync_infra_with_source.md  170_cursor_push_and_verify_dummy_ci.md  Agent_Data_Final_Report.md  CHANGELOG.md  CLI126A_COMPLETION_REPORT.md  CLI126B_COMPLETION_REPORT.md  CLI126_COMPLETION_REPORT.md  CLI140g3_completion_report.txt  CLI140h2_completion_report.txt  (+300 more)
.cache/: embeddings.json  test_embeddings.json
.cursor/: CI_failures.txt  CI_summary.txt  CLEANUP_GITHUB_BEFORE_CURSOR.md  CLI100B_all_green.txt  CLI101B_all_green.txt  CLI102B_all_green.txt  CLI103A1_1_1_all_green.txt  CLI103A1_1_1_env_versions.txt  CLI103A1_1_1_error.txt  CLI103A1_1_1_guide.txt  CLI103A1_1_all_green.txt  CLI103A1_1_error.txt  CLI103A1_1_guide.txt  CLI103A1_2_1_all_green.txt  CLI103A1_2_1_attempt1_error.txt  CLI103A1_2_1_attempt2.txt  CLI103A1_2_1_attempt2_dot_slash.txt  CLI103A1_2_1_attempt_PRE_COMMIT_CONFIG.txt  CLI103A1_2_1_attempt_PRE_COMMIT_TOP_LEVEL.txt  CLI103A1_2_1_attempt_hardcoded_path.txt  CLI103A1_2_1_attempt_pythonpath.txt  CLI103A1_2_1_env_versions.txt  CLI103A1_2_1_error.txt  CLI103A1_2_1_guide.txt  CLI103A1_2_all_green.txt  CLI103A1_2_error.txt  CLI103A1_2_guide.txt  CLI103A1_all_green.txt  CLI103A1_error.txt  (+220 more)
(+919 files in other folders)
